# calibrate_imu

./: CMakeLists.txt  README  README.md  mainpage.dox  manifest.xml  package.xml
data/: last_mag_calibration
launch/: calibrator.launch
nodes/: calibrate_imu.py  mag_calibration_16_07_13_15_56_09  plot_calibration_data.py
