<?xml version="1.0"?>
<package>
<name>calibrate_imu</name>
<version>0.0.0</version>
<description>The calibrate_imu package</description>

<maintainer email="juancamilog@todo.todo">juancamilog</maintainer>
<license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend> 
<build_depend>rospy</build_depend> 
<build_depend>std_msgs</build_depend> 
<build_depend>geometry_msgs</build_depend> 

<run_depend>roscpp</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>std_srvs</run_depend>
<run_depend>message_runtime</run_depend>
<run_depend>message_filters</run_depend>
</package>

